--- a/public/styles/subpages/_products-page.scss
+++ b/public/styles/subpages/_products-page.scss
@@ -11,9 +11,24 @@
 	order: 3;
 	.items-box__item {
 		flex-basis: 30%;
+		display: block;
 		margin: 30px 0;
 		overflow: hidden;
 		text-align: center;
+		.items-box__item--main-image {
+			object-fit: contain;
+			width: 90%;
+			height: 265px;
+			transition-duration: 90ms;
+			display: none;
+			&:hover {
+				transform: scale(1.02);
+				transition-duration: 90ms;
+			}
+		}
+		.show {
+			display: initial;
+		}
 		.items-box__item--description {
 			margin: 5px;
 			color: map-get($color, darkgrey);
@@ -25,17 +40,6 @@
 			height: 100%; 
 			display: flex;
 			align-items: center;
-		}
-	}
-	.items-box__item--main-image {
-		object-fit: contain;
-		width: 90%;
-		height: 265px;
-		transition-duration: 90ms;
-		// border-radius: 100%;
-		&:hover {
-			transform: scale(1.02);
-			transition-duration: 90ms;
 		}
 	}
 	.price-discount {
